Group4_Interpreter/Group4_Interpreter/obj/Debug/net7.0/CodeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:\group4-interpreter\Group4_Interpreter\Group4_Interpreter\Code.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Group4_Interpreter {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class CodeParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, BEGIN_CODE=24, 
		END_CODE=25, BEGIN_IF=26, END_IF=27, WHILE=28, BEGIN_WHILE=29, END_WHILE=30, 
		INT=31, FLOAT=32, CHAR=33, BOOL=34, INTEGER_VALUES=35, FLOAT_VALUES=36, 
		CHARACTER_VALUES=37, BOOLEAN_VALUES=38, STRING_VALUES=39, LOGICAL_OPERATORS=40, 
		SCAN=41, IDENTIFIERS=42, COMMENTS=43, BLANK_LINES=44, WHITESPACES=45, 
		IDENTIFIER=46;
	public const int
		RULE_programStructure = 0, RULE_programLines = 1, RULE_programStatements = 2, 
		RULE_variableInitialization = 3, RULE_assignmentOperator = 4, RULE_beginBlocks = 5, 
		RULE_ifCondition = 6, RULE_elseIfCondition = 7, RULE_whileLoop = 8, RULE_programDataTypes = 9, 
		RULE_constantValues = 10, RULE_expression = 11, RULE_multDivModOperators = 12, 
		RULE_addSubConcatenatorOperators = 13, RULE_comparisonOperators = 14, 
		RULE_logicalOperators = 15, RULE_openParenthesis = 16, RULE_closeParenthesis = 17, 
		RULE_methodCall = 18, RULE_scanFunction = 19;
	public static readonly string[] ruleNames = {
		"programStructure", "programLines", "programStatements", "variableInitialization", 
		"assignmentOperator", "beginBlocks", "ifCondition", "elseIfCondition", 
		"whileLoop", "programDataTypes", "constantValues", "expression", "multDivModOperators", 
		"addSubConcatenatorOperators", "comparisonOperators", "logicalOperators", 
		"openParenthesis", "closeParenthesis", "methodCall", "scanFunction"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "','", "'='", "'IF'", "'('", "')'", "'ELSE'", "'NOT'", "'*'", 
		"'/'", "'%'", "'+'", "'-'", "'&'", "'=='", "'<>'", "'>'", "'<'", "'>='", 
		"'<='", "'['", "']'", "':'", null, null, null, null, "'WHILE'", null, 
		null, "'INT'", "'FLOAT'", "'CHAR'", "'BOOL'", null, null, null, null, 
		null, null, "'SCAN:'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"BEGIN_CODE", "END_CODE", "BEGIN_IF", "END_IF", "WHILE", "BEGIN_WHILE", 
		"END_WHILE", "INT", "FLOAT", "CHAR", "BOOL", "INTEGER_VALUES", "FLOAT_VALUES", 
		"CHARACTER_VALUES", "BOOLEAN_VALUES", "STRING_VALUES", "LOGICAL_OPERATORS", 
		"SCAN", "IDENTIFIERS", "COMMENTS", "BLANK_LINES", "WHITESPACES", "IDENTIFIER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Code.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public CodeParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramStructureContext : ParserRuleContext {
		public ITerminalNode BEGIN_CODE() { return GetToken(CodeParser.BEGIN_CODE, 0); }
		public ITerminalNode END_CODE() { return GetToken(CodeParser.END_CODE, 0); }
		public ITerminalNode Eof() { return GetToken(CodeParser.Eof, 0); }
		public ProgramLinesContext[] programLines() {
			return GetRuleContexts<ProgramLinesContext>();
		}
		public ProgramLinesContext programLines(int i) {
			return GetRuleContext<ProgramLinesContext>(i);
		}
		public ProgramStructureContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programStructure; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterProgramStructure(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitProgramStructure(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgramStructure(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramStructureContext programStructure() {
		ProgramStructureContext _localctx = new ProgramStructureContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_programStructure);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40; Match(BEGIN_CODE);
			State = 44;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << WHILE) | (1L << INT) | (1L << FLOAT) | (1L << CHAR) | (1L << BOOL) | (1L << IDENTIFIERS))) != 0)) {
				{
				{
				State = 41; programLines();
				}
				}
				State = 46;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 47; Match(END_CODE);
			State = 48; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProgramLinesContext : ParserRuleContext {
		public VariableInitializationContext variableInitialization() {
			return GetRuleContext<VariableInitializationContext>(0);
		}
		public ProgramStatementsContext programStatements() {
			return GetRuleContext<ProgramStatementsContext>(0);
		}
		public IfConditionContext ifCondition() {
			return GetRuleContext<IfConditionContext>(0);
		}
		public WhileLoopContext whileLoop() {
			return GetRuleContext<WhileLoopContext>(0);
		}
		public ProgramLinesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programLines; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterProgramLines(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitProgramLines(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgramLines(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramLinesContext programLines() {
		ProgramLinesContext _localctx = new ProgramLinesContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_programLines);
		try {
			State = 54;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case INT:
			case FLOAT:
			case CHAR:
			case BOOL:
				EnterOuterAlt(_localctx, 1);
				{
				State = 50; variableInitialization();
				}
				break;
			case IDENTIFIERS:
				EnterOuterAlt(_localctx, 2);
				{
				State = 51; programStatements();
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 52; ifCondition();
				}
				break;
			case WHILE:
				EnterOuterAlt(_localctx, 4);
				{
				State = 53; whileLoop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProgramStatementsContext : ParserRuleContext {
		public AssignmentOperatorContext assignmentOperator() {
			return GetRuleContext<AssignmentOperatorContext>(0);
		}
		public MethodCallContext methodCall() {
			return GetRuleContext<MethodCallContext>(0);
		}
		public ProgramStatementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programStatements; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterProgramStatements(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitProgramStatements(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgramStatements(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramStatementsContext programStatements() {
		ProgramStatementsContext _localctx = new ProgramStatementsContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_programStatements);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				State = 56; assignmentOperator();
				}
				break;

			case 2:
				{
				State = 57; methodCall();
				}
				break;
			}
			State = 60; Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableInitializationContext : ParserRuleContext {
		public ProgramDataTypesContext programDataTypes() {
			return GetRuleContext<ProgramDataTypesContext>(0);
		}
		public ITerminalNode[] IDENTIFIERS() { return GetTokens(CodeParser.IDENTIFIERS); }
		public ITerminalNode IDENTIFIERS(int i) {
			return GetToken(CodeParser.IDENTIFIERS, i);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public VariableInitializationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableInitialization; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterVariableInitialization(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitVariableInitialization(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableInitialization(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableInitializationContext variableInitialization() {
		VariableInitializationContext _localctx = new VariableInitializationContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_variableInitialization);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; programDataTypes();
			State = 63; Match(IDENTIFIERS);
			State = 68;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__1) {
				{
				{
				State = 64; Match(T__1);
				State = 65; Match(IDENTIFIERS);
				}
				}
				State = 70;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 73;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__2) {
				{
				State = 71; Match(T__2);
				State = 72; expression(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentOperatorContext : ParserRuleContext {
		public ITerminalNode IDENTIFIERS() { return GetToken(CodeParser.IDENTIFIERS, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public AssignmentOperatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignmentOperator; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterAssignmentOperator(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitAssignmentOperator(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignmentOperator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentOperatorContext assignmentOperator() {
		AssignmentOperatorContext _localctx = new AssignmentOperatorContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_assignmentOperator);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75; Match(IDENTIFIERS);
			State = 76; Match(T__2);
			State = 77; expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BeginBlocksContext : ParserRuleContext {
		public ITerminalNode BEGIN_CODE() { return GetToken(CodeParser.BEGIN_CODE, 0); }
		public ITerminalNode BEGIN_IF() { return GetToken(CodeParser.BEGIN_IF, 0); }
		public ITerminalNode BEGIN_WHILE() { return GetToken(CodeParser.BEGIN_WHILE, 0); }
		public BeginBlocksContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_beginBlocks; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterBeginBlocks(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitBeginBlocks(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBeginBlocks(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BeginBlocksContext beginBlocks() {
		BeginBlocksContext _localctx = new BeginBlocksContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_beginBlocks);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BEGIN_CODE) | (1L << BEGIN_IF) | (1L << BEGIN_WHILE))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfConditionContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode BEGIN_IF() { return GetToken(CodeParser.BEGIN_IF, 0); }
		public BeginBlocksContext beginBlocks() {
			return GetRuleContext<BeginBlocksContext>(0);
		}
		public ITerminalNode END_IF() { return GetToken(CodeParser.END_IF, 0); }
		public ElseIfConditionContext elseIfCondition() {
			return GetRuleContext<ElseIfConditionContext>(0);
		}
		public IfConditionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifCondition; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterIfCondition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitIfCondition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfCondition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfConditionContext ifCondition() {
		IfConditionContext _localctx = new IfConditionContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_ifCondition);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81; Match(T__3);
			State = 82; Match(T__4);
			State = 83; expression(0);
			State = 84; Match(T__5);
			State = 85; Match(BEGIN_IF);
			State = 86; beginBlocks();
			State = 87; Match(END_IF);
			State = 89;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				State = 88; elseIfCondition();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElseIfConditionContext : ParserRuleContext {
		public ITerminalNode BEGIN_IF() { return GetToken(CodeParser.BEGIN_IF, 0); }
		public BeginBlocksContext beginBlocks() {
			return GetRuleContext<BeginBlocksContext>(0);
		}
		public ITerminalNode END_IF() { return GetToken(CodeParser.END_IF, 0); }
		public IfConditionContext ifCondition() {
			return GetRuleContext<IfConditionContext>(0);
		}
		public ElseIfConditionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elseIfCondition; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterElseIfCondition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitElseIfCondition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElseIfCondition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElseIfConditionContext elseIfCondition() {
		ElseIfConditionContext _localctx = new ElseIfConditionContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_elseIfCondition);
		try {
			State = 97;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case T__6:
				EnterOuterAlt(_localctx, 1);
				{
				State = 91; Match(T__6);
				{
				State = 92; Match(BEGIN_IF);
				State = 93; beginBlocks();
				State = 94; Match(END_IF);
				}
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 2);
				{
				State = 96; ifCondition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhileLoopContext : ParserRuleContext {
		public ITerminalNode WHILE() { return GetToken(CodeParser.WHILE, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode BEGIN_WHILE() { return GetToken(CodeParser.BEGIN_WHILE, 0); }
		public ITerminalNode END_WHILE() { return GetToken(CodeParser.END_WHILE, 0); }
		public BeginBlocksContext[] beginBlocks() {
			return GetRuleContexts<BeginBlocksContext>();
		}
		public BeginBlocksContext beginBlocks(int i) {
			return GetRuleContext<BeginBlocksContext>(i);
		}
		public WhileLoopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whileLoop; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterWhileLoop(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitWhileLoop(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileLoop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhileLoopContext whileLoop() {
		WhileLoopContext _localctx = new WhileLoopContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_whileLoop);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; Match(WHILE);
			State = 100; Match(T__4);
			State = 101; expression(0);
			State = 102; Match(T__5);
			State = 103; Match(BEGIN_WHILE);
			State = 107;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BEGIN_CODE) | (1L << BEGIN_IF) | (1L << BEGIN_WHILE))) != 0)) {
				{
				{
				State = 104; beginBlocks();
				}
				}
				State = 109;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 110; Match(END_WHILE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProgramDataTypesContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(CodeParser.INT, 0); }
		public ITerminalNode FLOAT() { return GetToken(CodeParser.FLOAT, 0); }
		public ITerminalNode BOOL() { return GetToken(CodeParser.BOOL, 0); }
		public ITerminalNode CHAR() { return GetToken(CodeParser.CHAR, 0); }
		public ProgramDataTypesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programDataTypes; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterProgramDataTypes(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitProgramDataTypes(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgramDataTypes(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramDataTypesContext programDataTypes() {
		ProgramDataTypesContext _localctx = new ProgramDataTypesContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_programDataTypes);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << CHAR) | (1L << BOOL))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstantValuesContext : ParserRuleContext {
		public ITerminalNode INTEGER_VALUES() { return GetToken(CodeParser.INTEGER_VALUES, 0); }
		public ITerminalNode FLOAT_VALUES() { return GetToken(CodeParser.FLOAT_VALUES, 0); }
		public ITerminalNode CHARACTER_VALUES() { return GetToken(CodeParser.CHARACTER_VALUES, 0); }
		public ITerminalNode BOOLEAN_VALUES() { return GetToken(CodeParser.BOOLEAN_VALUES, 0); }
		public ITerminalNode STRING_VALUES() { return GetToken(CodeParser.STRING_VALUES, 0); }
		public ConstantValuesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constantValues; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterConstantValues(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitConstantValues(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstantValues(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstantValuesContext constantValues() {
		ConstantValuesContext _localctx = new ConstantValuesContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_constantValues);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER_VALUES) | (1L << FLOAT_VALUES) | (1L << CHARACTER_VALUES) | (1L << BOOLEAN_VALUES) | (1L << STRING_VALUES))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ConstantValuesContext constantValues() {
			return GetRuleContext<ConstantValuesContext>(0);
		}
		public ITerminalNode IDENTIFIERS() { return GetToken(CodeParser.IDENTIFIERS, 0); }
		public MethodCallContext methodCall() {
			return GetRuleContext<MethodCallContext>(0);
		}
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
